[package]
name = "syzlang-parser"
version = "0.1.5"
edition = "2021"
license-file = "LICENSE"
description = "Parse Syzlang language"
readme = "README.md"
homepage = "https://github.com/rstenvi/syzlang-parser"
repository = "https://github.com/rstenvi/syzlang-parser"
keywords = ["syzlang", "syzkaller", "syscall"]

[[bin]]
name = "syzlang-parser"
required-features = ["cli"]

[[bench]]
name = "token_benches"
harness = false

[[bench]]
name = "parser_benches"
harness = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = "0.4"

thiserror = "2"
bytebuffer = "2.1"
lazy_static = "1.4"
glob = "0.3"

# For CLI app
anyhow = { version = "1", optional = true }
clap = { version = "4.3", features = ["derive"], optional = true }
pretty_env_logger = { version = "0.5", optional = true }
clap-verbosity-flag = { version = "2", optional = true }

[dev-dependencies]
# Used to register logging at setup when running tests
ctor = "0.5"
env_logger = "0.11"
criterion = "0.5"

[features]
std = []

# Hide some features I'm still working on
unstable = []

cli = ["clap", "pretty_env_logger", "clap-verbosity-flag", "anyhow" ]
